Format email body

--- a/src/main/resources/messages_fi.properties
+++ b/src/main/resources/messages_fi.properties
@@ -1,6 +1,6 @@
 email_from_address = PaITuli (CSC) <gis@csc.fi>
 email_subject = PaITulin lataustiedosto on valmiina
-email_body_template = Ladattava aineisto: {0}.<br><br>\n\
+email_body_template = Ladattava aineisto: {0}<br><br>\n\
 Tiedostot:<br>{1}<br><br>\n\
-Tilaamasi tiedostot ovat ladattavissa osoitteessa:<br><br><a href="{2}">{3}</a>.<br><br>\n\
+Tilaamasi tiedostot ovat ladattavissa osoitteessa:<br><br><a href="{2}">{2}</a>.<br><br>\n\
 Kiitos lataustilauksestasi.<br><br>
