--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,5 +1,7 @@
 email_subject = PaITuli data download is available
-email_body_template = You have ordered: {0}.<br><br>\n\
+email_body_template = <html><body>\n\
+You have ordered: {0}.<br><br>\n\
 Files:<br>{1}<br><br>\n\
 The files ordered can be downloaded from:<br><br><a href="{2}">{2}</a>.<br><br>\n\
-Thank you for downloading from PaITuli.<br><br>
+Thank you for downloading from PaITuli.<br><br>\n\
+</body></html>
