Add missing file list email functionality

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,7 +1,15 @@
-email_subject = PaITuli data download is available
-email_body_template = <html><body>\n\
+package_email_subject = PaITuli data download is available
+package_email_body_template = <html><body>\n\
 You have ordered: {0}.<br><br>\n\
 Files:<br>{1}<br><br>\n\
 The files ordered can be downloaded from:<br><br><a href="{2}">{2}</a>.<br><br>\n\
+Thank you for downloading from PaITuli.<br><br>\n\
+</body></html>
+url_list_email_subject = PaITuli data download is available
+url_list_email_body_template = <html><body>\n\
+You have ordered: {0}.<br><br>\n\
+The file list that was ordered can be downloaded from:<br><br><a download href="{1}">{1}</a>.<br><br>\n\
+The files list includes paths to files which can be used to fetch the files via FTP, HTTP or rsync."<br><br>\n\
+Additional information on how to use the files list: <a href="https://avaa.tdata.fi/web/paituli/ftp-/-rsync">ftp and rsync page</a>.<br><br>\n\
 Thank you for downloading from PaITuli.<br><br>\n\
 </body></html>
