--- a/src/main/resources/messages_fi.properties
+++ b/src/main/resources/messages_fi.properties
@@ -1,15 +1,15 @@
-package_email_subject = PaITulin lataustiedosto on valmiina
+package_email_subject = Paitulin lataustiedosto on valmiina
 package_email_body_template = <html><body>\n\
 Ladattava aineisto: {0}<br><br>\n\
 Tiedostot:<br>{1}<br><br>\n\
 Tilaamasi tiedostot ovat ladattavissa osoitteessa:<br><br><a href="{2}">{2}</a>.<br><br>\n\
 Kiitos lataustilauksestasi.<br><br>\n\
 </body></html>
-url_list_email_subject = PaITulin tiedostolista on valmiina
+url_list_email_subject = Paitulin tiedostolista on valmiina
 url_list_email_body_template = <html><body>\n\
 Ladattava aineisto: {0}<br><br>\n\
 Tilaamasi tiedostolista on ladattavissa osoitteessa:<br><br><a download href="{1}">{1}</a>.<br><br>\n\
 Tiedostolista sisältää tiedostojen polut, joiden avulla voit ladata aineiston FTP:n, HTTP:n tai rsyncin avulla.<br><br>\n\
-Lisätietoja tiedostolistan käyttämisestä osoitteesta <a href=https://avaa.tdata.fi/web/paituli/ftp-/-rsync>ftp- ja rsync-sivulta</a>.<br><br>\n\
+Lisätietoja tiedostolistan käyttämisestä osoitteesta <a href=https://paituli.csc.fi/ftprsync.html>ftp- ja rsync-sivulta</a>.<br><br>\n\
 Kiitos lataustilauksestasi.<br><br>\n\
 </body></html>
