CSCGIS-486 New error email message

--- a/src/main/resources/messages_fi.properties
+++ b/src/main/resources/messages_fi.properties
@@ -5,6 +5,9 @@ Tiedostot:<br>{1}<br><br>\n\
 Tilaamasi tiedostot ovat ladattavissa osoitteessa:<br><br><a href="{2}">{2}</a>.<br><br>\n\
 Kiitos lataustilauksestasi.<br><br>\n\
 </body></html>
+package_error_email_subject = Paitulin lataustiedoston generointi epäonnistui
+package_error_email_body = Latauspaketin generointi epäonnistui. Tilaamasi aineistojen koko on\n\
+  suurempi maksimi kertalataus 15GB.
 url_list_email_subject = Paitulin tiedostolista on valmiina
 url_list_email_body_template = <html><body>\n\
 Ladattava aineisto: {0}<br><br>\n\
