--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -6,7 +6,7 @@ The files ordered can be downloaded from:<br><br><a href="{2}">{2}</a>.<br><br>\
 Thank you for downloading from PaITuli.<br><br>\n\
 </body></html>
 package_error_email_subject = Paituli download file generation failed
-package_error_email_body = The generation of download package failed. The size of the ordered files is\n\
+package_error_email_body = The generation of download package failed. The size of the ordered files {0}GB is\n\
   more than possible download max 15 GB of data.
 url_list_email_subject = Paituli data download is available
 url_list_email_body_template = <html><body>\n\
