--- a/src/main/resources/messages_fi.properties
+++ b/src/main/resources/messages_fi.properties
@@ -6,8 +6,8 @@ Tilaamasi tiedostot ovat ladattavissa osoitteessa:<br><br><a href="{2}">{2}</a>.
 Kiitos lataustilauksestasi.<br><br>\n\
 </body></html>
 package_error_email_subject = Paitulin lataustiedoston generointi epäonnistui
-package_error_email_body = Latauspaketin generointi epäonnistui. Tilaamasi aineistojen koko on {0}GB \n\
-  suurempi maksimi kertalataus 15GB.
+package_error_email_body_template = Latauspaketin generointi epäonnistui. Tilaamasi aineistojen koko on {0}GB \n\
+  suurempi kuin maksimi kertalataus 15GB.
 url_list_email_subject = Paitulin tiedostolista on valmiina
 url_list_email_body_template = <html><body>\n\
 Ladattava aineisto: {0}<br><br>\n\
