--- a/src/main/resources/messages_fi.properties
+++ b/src/main/resources/messages_fi.properties
@@ -13,6 +13,6 @@ url_list_email_body_template = <html><body>\n\
 Ladattava aineisto: {0}<br><br>\n\
 Tilaamasi tiedostolista on ladattavissa osoitteessa:<br><br><a download href="{1}">{1}</a>.<br><br>\n\
 Tiedostolista sisältää tiedostojen polut, joiden avulla voit ladata aineiston FTP:n, HTTP:n tai rsyncin avulla.<br><br>\n\
-Lisätietoja tiedostolistan käyttämisestä osoitteesta <a href=https://paituli.csc.fi/ftprsync.html>ftp- ja rsync-sivulta</a>.<br><br>\n\
+Lisätietoja tiedostolistan käyttämisestä löytyy <a href=https://paituli.csc.fi/files.html>massalataus-sivulta</a>.<br><br>\n\
 Kiitos lataustilauksestasi.<br><br>\n\
 </body></html>
